--- a/wiki/andannajwa_lidi/index.html
+++ b/wiki/andannajwa_lidi/index.html
@@ -104,12 +104,20 @@
             <p>
                 Już 8 czerwca 2023 roku Wigell nakazał przygotować się do akcji zbrojnej przeciw DRP. Broń była pozyskiwana głównie dzięki produkcji własnej oraz korumpowaniu służb państwowych. W przeddzień operacji doszło do zamachu na najwyższą kamienicę Starego Miasta. Podpalono sklep na parterze oraz podłożono bombę, która zniszczyła 1/3 budynku, obiekt jednak odbudowano. Powstanie ostatecznie wybuchło 21 czerwca – powstańcy zdobyli ratusz oraz większość Starówki, po czym wyszli na teren Śródmieścia, gdzie zaczęli dokonywać zbrodni na mieszkańcach oraz palić zabudowę miasta. Zdobyli także część uzbrojenia i stację kolejową, która też została podpalona.
             </p>
-            <figure class="left" style="width: 200px">
-                <img src="https://i.ibb.co/g3TkXS7/dsfg.webp" />
-                <figcaption>
-                    Powstańcy na tle spalonego dworca
-                </figcaption>
-            </figure>
+            <div class="image group">
+                <figure>
+                    <img src="https://i.ibb.co/R2h1GWT/obraz-2024-06-10-211612067.png" />
+                    <figcaption>
+                        Wysadzona kamienica pod adresem Nowy Targ 9/11
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="https://i.ibb.co/g3TkXS7/dsfg.webp" />
+                    <figcaption>
+                        Powstańcy na tle spalonego dworca
+                    </figcaption>
+                </figure>
+            </div>
             <p>
                 Ostatecznie jednak powstanie upadło a w walkach miejskich zniszczeniu uległa około połowa Starówki. Przywódca organizacji został złapany i aresztowany 7 lipca.
             </p>
@@ -118,17 +126,7 @@
                 9 lipca ogłoszono nowego lidera – Venejna Hajgbdana. Organizacja jednak była wtedy mocno osłabiona, przez co nie mogła podjąć żadnej akcji. Ponadto odbudowywane kamienice na Starówce zaczęły być coraz częściej zajmowane przez ludność napływową. Pozycja Hajgbdana była kwestionowana a wiele członków organizacji opuściło ją na rzecz mniej radykalnych opcji, które krytykowały decyzję o wybuchu powstania. Bunt jednak miał spory wpływ na decyzję o powstaniu Regionu Autonomicznego Łodycza 18 lipca 2023 roku. Hajgbdan skupił się na odbudowie wpływów i przygotowaniu do kolejnej akcji zbrojnej planowanej na 2024 rok.
             </p>
             <h2>Kres organizacji</h2>
-            <figure class="right" style="width: 200px">
-                <img src="https://i.ibb.co/fQY7SzL/gsdg.webp" />
-                <figcaption>
-                    Aresztowanie Venejna Hajgbdana
-                </figcaption>
-            </figure>
-            <p>
-                Nie udało się jednak doprowadzić do drugiego powstania, gdyż 13 stycznia 2024 roku SB przeprowadziło operację specjalną pod kryptonimem „Lew Łodyczy”. W czasie operacji SB przechwyciło większość składów z bronią, separatyści przejęli ratusz w którym się barykadowali. W celu odbicia budynku musiano wykorzystać artylerię a obiekt został podpalony. Operacja zakończyła się sukcesem służb Pieczarii, które aresztowały Hajgbdana, co doprowadziło do upadku organizacji. W czasie operacji zginęło 8 esbeków, a jeden pieczarski wóz został uszkodzony. Straty po stronie separatystów wynoszą 19 zmarłych, 2 rannych, utratę znacznej ilości broni oraz pojmanie lidera.
-            </p>
-            <div class="article-image-gallery">
-                <h1>Galeria</h1>
+            <div class="image group">
                 <figure>
                     <img src="https://i.ibb.co/JtYwtk7/fasd.webp" />
                     <figcaption>
@@ -136,12 +134,15 @@
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="https://i.ibb.co/R2h1GWT/obraz-2024-06-10-211612067.png" />
+                    <img src="https://i.ibb.co/fQY7SzL/gsdg.webp" />
                     <figcaption>
-                        Wysadzona kamienica pod adresem Nowy Targ 9/11
+                        Aresztowanie Venejna Hajgbdana
                     </figcaption>
                 </figure>
             </div>
+            <p>
+                Nie udało się jednak doprowadzić do drugiego powstania, gdyż 13 stycznia 2024 roku SB przeprowadziło operację specjalną pod kryptonimem „Lew Łodyczy”. W czasie operacji SB przechwyciło większość składów z bronią, separatyści przejęli ratusz w którym się barykadowali. W celu odbicia budynku musiano wykorzystać artylerię a obiekt został podpalony. Operacja zakończyła się sukcesem służb Pieczarii, które aresztowały Hajgbdana, co doprowadziło do upadku organizacji. W czasie operacji zginęło 8 esbeków, a jeden pieczarski wóz został uszkodzony. Straty po stronie separatystów wynoszą 19 zmarłych, 2 rannych, utratę znacznej ilości broni oraz pojmanie lidera.
+            </p>
         </article>
     </main>
     <script src="/fangea/pageheader.js"></script>
