--- a/wiki/edytor/index.html
+++ b/wiki/edytor/index.html
@@ -324,7 +324,7 @@
             });
             const toolbarButtons = document.querySelectorAll('.toolbar-button');
 
-            const linkTemplate = '[https://grumqy.github.io/fangea/wiki/cartland/](Cartland)';
+            const linkTemplate = '(https://grumqy.github.io/fangea/wiki/cartland/)[Cartland]';
             const imageTemplate = '[[img:http://via.placeholder.com/640x360|left|Opis zdjęcia]]';
             const bulletedListTemplate = `\n* List Item \n* List item \n* List item\n`;
             const numberedListTemplate = `\n# List Item \n# List item \n# List item\n`;
