--- a/wiki/andannajwa_lidi/index.html
+++ b/wiki/andannajwa_lidi/index.html
@@ -104,7 +104,7 @@
             <p>
                 Już 8 czerwca 2023 roku Wigell nakazał przygotować się do akcji zbrojnej przeciw DRP. Broń była pozyskiwana głównie dzięki produkcji własnej oraz korumpowaniu służb państwowych. W przeddzień operacji doszło do zamachu na najwyższą kamienicę Starego Miasta. Podpalono sklep na parterze oraz podłożono bombę, która zniszczyła 1/3 budynku, obiekt jednak odbudowano. Powstanie ostatecznie wybuchło 21 czerwca – powstańcy zdobyli ratusz oraz większość Starówki, po czym wyszli na teren Śródmieścia, gdzie zaczęli dokonywać zbrodni na mieszkańcach oraz palić zabudowę miasta. Zdobyli także część uzbrojenia i stację kolejową, która też została podpalona.
             </p>
-            <div class="image group">
+            <div class="image-group">
                 <figure>
                     <img src="https://i.ibb.co/R2h1GWT/obraz-2024-06-10-211612067.png" />
                     <figcaption>
