--- a/wiki/andannajwa_lidi/index.html
+++ b/wiki/andannajwa_lidi/index.html
@@ -126,7 +126,7 @@
                 9 lipca ogłoszono nowego lidera – Venejna Hajgbdana. Organizacja jednak była wtedy mocno osłabiona, przez co nie mogła podjąć żadnej akcji. Ponadto odbudowywane kamienice na Starówce zaczęły być coraz częściej zajmowane przez ludność napływową. Pozycja Hajgbdana była kwestionowana a wiele członków organizacji opuściło ją na rzecz mniej radykalnych opcji, które krytykowały decyzję o wybuchu powstania. Bunt jednak miał spory wpływ na decyzję o powstaniu Regionu Autonomicznego Łodycza 18 lipca 2023 roku. Hajgbdan skupił się na odbudowie wpływów i przygotowaniu do kolejnej akcji zbrojnej planowanej na 2024 rok.
             </p>
             <h2>Kres organizacji</h2>
-            <div class="image-group">
+            <div class="image-group right">
                 <figure>
                     <img src="https://i.ibb.co/JtYwtk7/fasd.webp" />
                     <figcaption>
