--- a/wiki/index.html
+++ b/wiki/index.html
@@ -42,6 +42,7 @@
                 <li><a href="https://grumqy.github.io/fangea/wiki/pampersia/">Pampersia</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/nadmorze/">Nadmorze</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/montecydia/">Montecydia</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/lemburg/">Lemburg</a></li>
             </ul> 
             <ul class="article-category">
                 <h1>Postacie</h1>
