--- a/waluty/index.html
+++ b/waluty/index.html
@@ -49,7 +49,7 @@
                                     <div class="currency-logo" style="background-image: url('https://i.ibb.co/XbWXD6k/image-5.png');"></div>
                                 </div>
                                 <div class="currency-data">
-                                    <div class="currency-name">DFA</div>
+                                    <div class="currency-name">UFD</div>
                                     <div class="currency-description">Dolar Fangejski</div>
                                 </div>
                             </div>
@@ -124,14 +124,14 @@
                 <label for="currency-value-input">Wartość w KPA</label>
             </div>
             <div id="switch-currencies-button"><i class="fa-solid fa-repeat"></i></div>
-            <div class="currency-calc-row" id="currency-output" data-selected-currency="DFA">
+            <div class="currency-calc-row" id="currency-output" data-selected-currency="UFD">
                 <div class="select-label">
                     <div class="currency-item">
                         <div class="currency-logo-container">
                             <div class="currency-logo" style="background-image: url('https://i.ibb.co/XbWXD6k/image-5.png');"></div>
                         </div>
                         <div class="currency-data">
-                            <div class="currency-name">DFA</div>
+                            <div class="currency-name">UFD</div>
                         </div>
                     </div>
                     <div class="currency-select">
@@ -150,7 +150,7 @@
                                     <div class="currency-logo" style="background-image: url('https://i.ibb.co/XbWXD6k/image-5.png');"></div>
                                 </div>
                                 <div class="currency-data">
-                                    <div class="currency-name">DFA</div>
+                                    <div class="currency-name">UFD</div>
                                     <div class="currency-description">Dolar Fangejski</div>
                                 </div>
                             </div>
@@ -222,7 +222,7 @@
                     </div>
                     
                 <input id="currency-value-output" type="number" readonly>
-                <label for="currency-value-output">Wartość w DFA</label>
+                <label for="currency-value-output">Wartość w UFD</label>
             </div>
         </div>
     </main>
