--- a/waluty/index.html
+++ b/waluty/index.html
@@ -286,7 +286,7 @@ document.addEventListener('DOMContentLoaded', function() {
 });
     const exchangeRates = {
         KPA: 1.0,
-        DFA: 1.0,
+        UFD: 1.0,
         REG: 1.4,
         IZM: 1.2,
         REB: 10.0,
