--- a/wiki/lemburg/index.html
+++ b/wiki/lemburg/index.html
@@ -6,23 +6,19 @@
 <title>Lemburg - Fangea i inne kontynenty</title>
 <meta property="og:title" content="Lemburg">
 <meta name="twitter:title" content="Lemburg">
-<meta name="description" content="Lemburg (gr. Λέμβουργ, IPA: [ˈle̞m.vuɾɡ]), Republika Lemburska (gr. Λεμβουργική Δημοκρατία Lembourgikí Dimokratía, IPA: [lem.vuɾ.ˈʝi.ci ði.mo.kɾaˈti.a]) – państwo federacyjne położone na wyspach lemburskich. Jest jednym z nielicznych państw, gdzie powszechnie stosuje się formy bezpośredniej demokracji. Lemburg jest państwem neutralnym. Lemburg ma długą historię i bogate dziedzictwo kulturowe. Uważany ">
-<meta property="og:description" content="Lemburg (gr. Λέμβουργ, IPA: [ˈle̞m.vuɾɡ]), Republika Lemburska (gr. Λεμβουργική Δημοκρατία Lembourgikí Dimokratía, IPA: [lem.vuɾ.ˈʝi.ci ði.mo.kɾaˈti.a]) – państwo federacyjne położone na wyspach lemburskich. Jest jednym z nielicznych państw, gdzie powszechnie stosuje się formy bezpośredniej demokracji. Lemburg jest państwem neutralnym. Lemburg ma długą historię i bogate dziedzictwo kulturowe. Uważany ">
-<meta name="twitter:description" content="Lemburg (gr. Λέμβουργ, IPA: [ˈle̞m.vuɾɡ]), Republika Lemburska (gr. Λεμβουργική Δημοκρατία Lembourgikí Dimokratía, IPA: [lem.vuɾ.ˈʝi.ci ði.mo.kɾaˈti.a]) – państwo federacyjne położone na wyspach lemburskich. Jest jednym z nielicznych państw, gdzie powszechnie stosuje się formy bezpośredniej demokracji. Lemburg jest państwem neutralnym. Lemburg ma długą historię i bogate dziedzictwo kulturowe. Uważany ">
+<meta name="description" content="Lemburg (gr. Λέμβουργ, IPA: [ˈlɛmburk]), Republika Lemburska (gr. Λεμβουργική Δημοκρατία Lembourgikí Dimokratía, IPA: [lɛm.bur.ˈʝi.ci ði.mo.kɾaˈti.a]) – państwo federacyjne położone na wyspach lemburskich. Jest jednym z nielicznych państw, gdzie powszechnie stosuje się formy bezpośredniej demokracji. Lemburg jest państwem neutralnym. Lemburg ma długą historię i bogate dziedzictwo kulturowe. Uważan">
+<meta property="og:description" content="Lemburg (gr. Λέμβουργ, IPA: [ˈlɛmburk]), Republika Lemburska (gr. Λεμβουργική Δημοκρατία Lembourgikí Dimokratía, IPA: [lɛm.bur.ˈʝi.ci ði.mo.kɾaˈti.a]) – państwo federacyjne położone na wyspach lemburskich. Jest jednym z nielicznych państw, gdzie powszechnie stosuje się formy bezpośredniej demokracji. Lemburg jest państwem neutralnym. Lemburg ma długą historię i bogate dziedzictwo kulturowe. Uważan">
+<meta name="twitter:description" content="Lemburg (gr. Λέμβουργ, IPA: [ˈlɛmburk]), Republika Lemburska (gr. Λεμβουργική Δημοκρατία Lembourgikí Dimokratía, IPA: [lɛm.bur.ˈʝi.ci ði.mo.kɾaˈti.a]) – państwo federacyjne położone na wyspach lemburskich. Jest jednym z nielicznych państw, gdzie powszechnie stosuje się formy bezpośredniej demokracji. Lemburg jest państwem neutralnym. Lemburg ma długą historię i bogate dziedzictwo kulturowe. Uważan">
 <meta property="og:image" content="https://i.ibb.co/yXS2s9J/lemburg.png">
 <meta name="twitter:image" content="https://i.ibb.co/yXS2s9J/lemburg.png">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="750">
-<link
-href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
-rel="stylesheet">
-<link
-href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100;200;300;400;500;600;700;800;900&display=swap"
-rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Geologica:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/fangea/style.css" />
 <script src="https://kit.fontawesome.com/533593bc84.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
 <header id="pageheader">
 </header>
@@ -32,17 +28,16 @@ rel="stylesheet">
 <ul></ul>
 </nav>
 <article>
-<header><div>Lemburg</div><span>17.06.2024</span></header>
-<table class="infobox"><caption>Republika Lemburska</caption><tbody><tr><th style="text-align: center;" colspan="2"> Λεμβουριακή Δημοκρατία</th></tr><tr><th style="text-align: center;" colspan="2"> <i>Lemburiakí Dimokratía</i></th></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td><img src="https://i.ibb.co/yXS2s9J/lemburg.png" data-description="Flaga Republiki Lemburskiej"></td><td><img src="https://i.ibb.co/6nHvM3j/lemburk.png" data-description="Godło Republiki Lemburskiej"> </td></tr><tr><td style="text-align: center;"> Flaga</td><td style="text-align: center;"> Godło </td></tr></tbody></table></td></tr><tr><td style="text-align: center;" colspan="2"> Dewiza: <i>Παράδοση και Καινοτομία</i><br><i>trb. Parádosi kai Kainotomía</i><br>(<i>Tradycja i Innowacja</i>) </td></tr><tr><td style="text-align: center;" colspan="2"> Hymn: <a href="https://grumqy.github.io/fangea/wiki/hymn_lemburga/"><i>Η Καρδιά της Λεμβουριακής Γης</i></a><br><i>trb. I Kardiá tis Lembouriakís Gis</i><br> (<i>Serce Lemburskiej Ziemi</i>) </td></tr><tr><td style="text-align: center;" colspan="2"> <audio controls=""><source src="" type="audio/mpeg"> </audio></td></tr><tr><th>Ustrój polityczny</th><td> republika federalna (system parlamentarno-komitetowy) </td></tr><tr><th>Konstytucja</th><td> <a href="https://grumqy.github.io/fangea/wiki/konstytucja_lemburska/">Konstytucja Lemburska</a> </td></tr><tr><th>Stolica</th><td> <a href="https://grumqy.github.io/fangea/wiki/vounaria/">Vounaria</a> (<i>de facto</i>)<br>brak (<i>de iure</i>) </td></tr><tr><th>Data powstania</th><td> 13 kwietnia 1831 </td></tr><tr><th>Prezydent</th><td> <a href="https://grumqy.github.io/fangea/wiki/nikolas_papadopoulos/">Nikolas Papadopoulos</a> </td></tr><tr><th>Powierzchnia</th><td> 2 011 km² </td></tr><tr><th>Populacja (2024)<br>• liczba ludności<br>• gęstość</th><td> <br>500 000<br>248.63 os./km² </td></tr><tr><th>Waluta</th><td> <a href="https://grumqy.github.io/fangea/wiki/dolar_fangejski/">Dolar Fangejski</a> </td></tr><tr><th>Telefoniczny nr kierunkowy</th><td> +45 </td></tr><tr><th>Domena internetowa</th><td> .lb </td></tr><tr><th>Kod samolotowy</th><td> LB </td></tr><tr><th>Narody i grupy etniczne</th><td> Lemburczycy: 79,3%<br>Iznotiańczycy: 11,2%<br>Sudfangejczycy: 9,5% </td></tr><tr><th>Język urzędowy</th><td> lemburski (nowogrecki) </td></tr><tr><th>Religia dominująca</th><td> prawosławie </td></tr><tr><th>PKB (2024)<br>• całkowite<br>• na osobę</th><td> <br>... UFD<br>... UFD </td></tr><tr><td style="text-align: center;" colspan="2"> <b>Położenie na mapie</b> </td></tr><tr><td style="text-align: center;" colspan="2"> <img src="https://i.ibb.co/hMR9cxz/obraz-2024-06-16-232833053.png" data-description="Położenie na mapie"> </td></tr></tbody></table>
+<header><div>Lemburg</div><span>22.06.2024</span></header>
+<table class="infobox"><caption>Republika Lemburska</caption><tbody><tr><th style="text-align: center;" colspan="2"> Λεμβουριακή Δημοκρατία</th></tr><tr><th style="text-align: center;" colspan="2"> <i>Lemburiakí Dimokratía</i></th></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td><img src="https://i.ibb.co/yXS2s9J/lemburg.png" data-description="Flaga Republiki Lemburskiej"></td><td><img src="https://i.ibb.co/6nHvM3j/lemburk.png" data-description="Godło Republiki Lemburskiej"> </td></tr><tr><td style="text-align: center;"> Flaga</td><td style="text-align: center;"> Godło </td></tr></tbody></table></td></tr><tr><td style="text-align: center;" colspan="2"> Dewiza: <i>Παράδοση και Καινοτομία</i><br><i>trb. Parádosi kai Kainotomía</i><br>(<i>Tradycja i Innowacja</i>) </td></tr><tr><td style="text-align: center;" colspan="2"> Hymn: <a href="https://grumqy.github.io/fangea/wiki/hymn_lemburga/"><i>Η Καρδιά της Λεμβουριακής Γης</i></a><br><i>trb. I Kardiá tis Lembouriakís Gis</i><br> (<i>Serce Lemburskiej Ziemi</i>) </td></tr><tr><td style="text-align: center;" colspan="2"> <audio controls=""><source src="" type="audio/mpeg"></audio> </td></tr><tr><th>Ustrój polityczny</th><td> republika federalna (system parlamentarno-komitetowy) </td></tr><tr><th>Konstytucja</th><td> <a href="https://grumqy.github.io/fangea/wiki/konstytucja_lemburska/">Konstytucja Lemburska</a> </td></tr><tr><th>Stolica</th><td> <a href="https://grumqy.github.io/fangea/wiki/vounaria/">Vounaria</a> (<i>de facto</i>)<br>brak (<i>de iure</i>) </td></tr><tr><th>Data powstania</th><td> 13 kwietnia 1831 </td></tr><tr><th>Prezydent</th><td> <a href="https://grumqy.github.io/fangea/wiki/nikolas_papadopoulos/">Nikolas Papadopoulos</a> </td></tr><tr><th>Powierzchnia</th><td> 2 011 km² </td></tr><tr><th>Populacja (2024)<br>• liczba ludności<br>• gęstość</th><td> <br>500 000<br>248.63 os./km² </td></tr><tr><th>Waluta</th><td> <a href="https://grumqy.github.io/fangea/wiki/dolar_fangejski/">Dolar Fangejski</a> </td></tr><tr><th>Telefoniczny nr kierunkowy</th><td> +45 </td></tr><tr><th>Domena internetowa</th><td> .lb </td></tr><tr><th>Kod samolotowy</th><td> LB </td></tr><tr><th>Narody i grupy etniczne</th><td> Lemburczycy: 79,3%<br>Iznotiańczycy: 11,2%<br>Sudfangejczycy: 9,5% </td></tr><tr><th>Język urzędowy</th><td> lemburski (nowogrecki) </td></tr><tr><th>Religia dominująca</th><td> prawosławie </td></tr><tr><th>PKB (2024)<br>• całkowite<br>• na osobę</th><td> <br>... UFD<br>... UFD </td></tr><tr><td style="text-align: center;" colspan="2"> <b>Położenie na mapie</b> </td></tr><tr><td style="text-align: center;" colspan="2"> <img src="https://i.ibb.co/hMR9cxz/obraz-2024-06-16-232833053.png" data-description="Położenie na mapie"> </td></tr><tr><td colspan="2" style="border-top: 1px solid #a2a9b1;"><table class="ibox"><tbody><tr class="plainlink"><td><img src="https://i.ibb.co/XJQSsqS/slownik.png"></td><td><span class="modal-opener" id="dictionary-opener">Hasło w słowniku</span></td></tr></tbody></table></td></tr></tbody></table>
 
-<p>Lemburg (gr. Λέμβουργ, IPA: [ˈle̞m.vuɾɡ]), Republika Lemburska ( gr. Λεμβουργική Δημοκρατία <i>Lembourgikí Dimokratía</i>, IPA: [lem.vuɾ.ˈʝi.ci ði.mo.kɾaˈti.a]) – państwo federacyjne położone na wyspach lemburskich. Jest jednym z nielicznych państw, gdzie powszechnie stosuje się formy bezpośredniej demokracji. Lemburg jest państwem neutralnym.</p>
+<p>Lemburg (gr. Λέμβουργ, IPA: [ˈlɛmburk]), Republika Lemburska (gr. Λεμβουργική Δημοκρατία <i>Lembourgikí Dimokratía</i>, IPA: [lɛm.bur.ˈʝi.ci ði.mo.kɾaˈti.a]) – państwo federacyjne położone na wyspach lemburskich. Jest jednym z nielicznych państw, gdzie powszechnie stosuje się formy bezpośredniej demokracji. Lemburg jest państwem neutralnym.</p>
 
 <p>Lemburg ma długą historię i bogate dziedzictwo kulturowe. Uważany jest za spadkobiercę starożytnej <a href="https://grumqy.github.io/fangea/wiki/lemuria/">Lemurii</a>. Jako taki, stanowi kolebkę całej cywilizacji fangejskiej, miejsce narodzin demokracji, filozofii, igrzysk olimpijskich, sportu, wielu podstawowych twierdzeń naukowych, zachodniej literatury, historiografii, politologii oraz teatru, zarówno komedii, jak i dramatu. Nowożytne państwo lemburskie zostało utworzone w wyniku zwycięskiego powstania przeciwko <a href="https://grumqy.github.io/fangea/wiki/iznotia/">rządom iznotiańskim</a>.</p>
 
 <p>Lemburg jest państwem wyspiarskim. Dominującą religią w Lemburgu jest protestantyzm (76,4%).</p>
 
 <h1>Geografia</h1>
-
 <p>Terytorium Lemburga można podzielić na:</p>
 
 <ul><li>Wyspę główną (Glaros)</li>
@@ -52,7 +47,7 @@ rel="stylesheet">
 
 <p>Wyspy wchodzące w skład Archipelagu Lemburskiego to:</p>
 
-<ol><li>Glaros</li>
+<ul><li>Glaros</li>
 <li>Armathia</li>
 <li>Fira</li>
 <li>Monolithos</li>
@@ -77,84 +72,68 @@ rel="stylesheet">
 <li>Arillas</li>
 <li>Filiates</li>
 <li>Xina</li>
-<li>Salamina</li></ol>
+<li>Salamina</li></ul>
 <p>Blisko 73% powierzchni Lemburga zajmują pasma górskie (średnia wysokość 700–1000 m n.p.m.). Obszary nizinne są niewielkie i występują w pobliżu wybrzeży (Niz. Vounariańska, Elejska oraz Wschodnioarmacka).</p>
 
 <h1>Klimat w Lemburgu</h1>
-
 <p>Lemburg pozostaje pod wpływem klimatu śródziemnomorskiego. Cechuje go łagodna zima z suchym, gorącym latem. W najcieplejszym miesiącu średnia temperatura wynosi ponad 22 °C. Są co najmniej cztery miesiące ze średnią temperaturą ponad 10 °C, w zimie mogą zdarzać się przymrozki. Notuje się co najmniej trzy razy więcej opadów atmosferycznych w najwilgotniejszych miesiącach zimowych w porównaniu z suchym latem.</p>
 
 <p>Regionalnie zróżnicowany klimat można jednak podzielić na dwie strefy: śródziemnomorski – obejmujący południowo-wschodnią część kraju (szczególnie w rejonach ośrodków wypoczynkowych) oraz umiarkowany, występujący w północno-zachodniej części kraju.</p>
 
 <h2>Pory roku w Lemburgu</h2>
-
-<table><tbody><tr><th>Pora roku</th><th>Meteorologiczna</th><th>Astronomiczna</th><th>Odczuwalna</th></tr><tr><th>wiosna</th><td> 1 marca do 31 maja</td><td>21 marca do 20 czerwca</td><td>od marca do maja </td></tr><tr><th>lato</th><td> 1 czerwca do 31 sierpnia</td><td>21 czerwca do 20 września</td><td>od czerwca do sierpnia </td></tr><tr><th>jesień</th><td> 1 września do 30 listopada</td><td>21 września do 20 grudnia</td><td>od września do listopada </td></tr><tr><th>zima</th><td> 1 grudnia do 28 lutego</td><td>21 grudnia do 20 marca</td><td>od grudnia do lutego </td></tr></tbody></table>
+<div class="table-wrapper"><table><tbody><tr><th>Pora roku</th><th>Meteorologiczna</th><th>Astronomiczna</th><th>Odczuwalna</th></tr><tr><th>wiosna</th><td> 1 marca do 31 maja</td><td>21 marca do 20 czerwca</td><td>od marca do maja </td></tr><tr><th>lato</th><td> 1 czerwca do 31 sierpnia</td><td>21 czerwca do 20 września</td><td>od czerwca do sierpnia </td></tr><tr><th>jesień</th><td> 1 września do 30 listopada</td><td>21 września do 20 grudnia</td><td>od września do listopada </td></tr><tr><th>zima</th><td> 1 grudnia do 28 lutego</td><td>21 grudnia do 20 marca</td><td>od grudnia do lutego </td></tr></tbody></table></div>
 
 <h1>Etymologia</h1>
-
 <p>...</p>
 
 <h1>Historia</h1>
-
 <p>...</p>
 
 <h1>Ustrój polityczny</h1>
-
 <p>...</p>
 
 <h1>Siły zbrojne</h1>
-
 <p>...</p>
 
 <h1>Ustrój polityczny</h1>
-
 <p>...</p>
 
 <h1>Podział administracyjny</h1>
-
 <p>...</p>
 
 <h1>Miasta</h1>
-
 <p>...</p>
 
 <h1>Demografia</h1>
-
 <p>...</p>
 
 <h1>Zatrudnienie</h1>
-
 <p>...</p>
 
 <h1>Infrastruktura i transport</h1>
-
 <p>...</p>
 
 <h1>Oświata i nauka</h1>
-
 <p>...</p>
 
 <h1>Architektura i sztuki piękne</h1>
-
 <p>...</p>
 
 <h1>Kultura</h1>
-
 <p>...</p>
 
 <h1>Święta</h1>
-
 <p>...</p>
  <div id="source-code" style="display:none;">{|infobox Republika Lemburska
-!tcc=2 Λεμβουριακή Δημοκρατία !
-!tcc=2 ''Lemburiakí Dimokratía'' !
+!t=cc=2 Λεμβουριακή Δημοκρατία !
+!t=cc=2 ''Lemburiakí Dimokratía'' !
 |{ibox
 |[[timg:https://i.ibb.co/yXS2s9J/lemburg.png|Flaga Republiki Lemburskiej]] || [[timg:https://i.ibb.co/6nHvM3j/lemburk.png|Godło Republiki Lemburskiej]] |
-|tc Flaga ||tc Godło |
+|t=c Flaga ||t=c Godło |
 }|
-|tcc=2 Dewiza: ''Παράδοση και Καινοτομία''<br>''trb. Parádosi kai Kainotomía''<br>(''Tradycja i Innowacja'') |
-|tcc=2 Hymn: (https://grumqy.github.io/fangea/wiki/hymn_lemburga/)[''Η Καρδιά της Λεμβουριακής Γης'']<br>''trb. I Kardiá tis Lembouriakís Gis''<br> (''Serce Lemburskiej Ziemi'') |
-|tcc=2 <audio controls><source src="" type="audio/mpeg"> |
+|t=cc=2 Dewiza: ''Παράδοση και Καινοτομία''<br>''trb. Parádosi kai Kainotomía''<br>(''Tradycja i Innowacja'') |
+|t=cc=2 Hymn: (https://grumqy.github.io/fangea/wiki/hymn_lemburga/)[''Η Καρδιά της Λεμβουριακής Γης'']<br>''trb. I Kardiá tis Lembouriakís Gis''<br> (''Serce Lemburskiej Ziemi'') |
+|t=cc=2 <audio controls=""><source src="" type="audio/mpeg"></audio> |
 ! Ustrój polityczny !| republika federalna (system parlamentarno-komitetowy) |
 ! Konstytucja !| (https://grumqy.github.io/fangea/wiki/konstytucja_lemburska/)[Konstytucja Lemburska] |
 ! Stolica !| (https://grumqy.github.io/fangea/wiki/vounaria/)[Vounaria] (''de facto'')<br>brak (''de iure'') |
@@ -170,11 +149,11 @@ rel="stylesheet">
 ! Język urzędowy !| lemburski (nowogrecki) |
 ! Religia dominująca !| prawosławie |
 ! PKB (2024)<br>• całkowite<br>• na osobę !| <br>... UFD<br>... UFD |
-|tcc=2 '''Położenie na mapie''' |
-|tcc=2 [[timg:https://i.ibb.co/hMR9cxz/obraz-2024-06-16-232833053.png|Położenie na mapie]] |
+|t=cc=2 '''Położenie na mapie''' |
+|t=cc=2 [[timg:https://i.ibb.co/hMR9cxz/obraz-2024-06-16-232833053.png|Położenie na mapie]] |
 |}
 
-Lemburg (gr. Λέμβουργ, IPA: [ˈle̞m.vuɾɡ]), Republika Lemburska (gr. Λεμβουργική Δημοκρατία ''Lembourgikí Dimokratía'', IPA: [lem.vuɾ.ˈʝi.ci ði.mo.kɾaˈti.a]) – państwo federacyjne położone na wyspach lemburskich. Jest jednym z nielicznych państw, gdzie powszechnie stosuje się formy bezpośredniej demokracji. Lemburg jest państwem neutralnym.
+Lemburg (gr. Λέμβουργ, IPA: [ˈlɛmburk]), Republika Lemburska (gr. Λεμβουργική Δημοκρατία ''Lembourgikí Dimokratía'', IPA: [lɛm.bur.ˈʝi.ci ði.mo.kɾaˈti.a]) – państwo federacyjne położone na wyspach lemburskich. Jest jednym z nielicznych państw, gdzie powszechnie stosuje się formy bezpośredniej demokracji. Lemburg jest państwem neutralnym.
 
 Lemburg ma długą historię i bogate dziedzictwo kulturowe. Uważany jest za spadkobiercę starożytnej (https://grumqy.github.io/fangea/wiki/lemuria/)[Lemurii]. Jako taki, stanowi kolebkę całej cywilizacji fangejskiej, miejsce narodzin demokracji, filozofii, igrzysk olimpijskich, sportu, wielu podstawowych twierdzeń naukowych, zachodniej literatury, historiografii, politologii oraz teatru, zarówno komedii, jak i dramatu. Nowożytne państwo lemburskie zostało utworzone w wyniku zwycięskiego powstania przeciwko (https://grumqy.github.io/fangea/wiki/iznotia/)[rządom iznotiańskim].
 
@@ -192,32 +171,32 @@ Powierzchnia Lemburga przypada na 26 wysp, z czego 24 są zamieszkałe. Wynika t
 
 Wyspy wchodzące w skład Archipelagu Lemburskiego to:
 
-# Glaros
-# Armathia
-# Fira
-# Monolithos
-# Tholos
-# Atokos
-# Paxos
-# Spoa
-# Lefkos
-# Othos
-# Karpathos
-# Chadies
-# Argos
-# Saria
-# Ardaktos
-# Mariou
-# Midaro
-# Kampos
-# Katounia
-# Petra
-# Dokos
-# Roda
-# Arillas
-# Filiates
-# Xina
-# Salamina
+* Glaros
+* Armathia
+* Fira
+* Monolithos
+* Tholos
+* Atokos
+* Paxos
+* Spoa
+* Lefkos
+* Othos
+* Karpathos
+* Chadies
+* Argos
+* Saria
+* Ardaktos
+* Mariou
+* Midaro
+* Kampos
+* Katounia
+* Petra
+* Dokos
+* Roda
+* Arillas
+* Filiates
+* Xina
+* Salamina
 
 Blisko 73% powierzchni Lemburga zajmują pasma górskie (średnia wysokość 700–1000 m n.p.m.). Obszary nizinne są niewielkie i występują w pobliżu wybrzeży (Niz. Vounariańska, Elejska oraz Wschodnioarmacka).
 
@@ -296,5 +275,40 @@ Regionalnie zróżnicowany klimat można jednak podzielić na dwie strefy: śró
 </main>
 <script src="/fangea/pageheader.js"></script>
 <script src="/fangea/article.js"></script>
+<script>
+const dictionaryhtml = `<h1>Lemburg</h1>
+<h2>wymowa</h2>
+<p>IPA: [ˈlɛmburk], AS: [lemburk], ​podział przy przenoszeniu wyrazu: Lem•burg</p>
+<h2>znaczenia</h2>
+<ul>
+<li>(1.1) geogr. polit. państwo na wyspach lemburskich ze stolicą w Vounarii</li>
+</ul>
+<h2>odmiana</h2>
+<table>
+<tbody>
+<tr><th>przypadek</th><th>liczba pojedyncza</th></tr>
+<tr><th>mianownik</th><td>Lemburg</td></tr>
+<tr><th>dopelniacz</th><td>Lemburga</td></tr>
+<tr><th>celownik</th><td>Lemburgowi</td></tr>
+<tr><th>biernik</th><td>Lemburg</td></tr>
+<tr><th>narzednik</th><td>Lemburgiem</td></tr>
+<tr><th>miejscownik</th><td>Lemburgu</td></tr>
+<tr><th>wolacz</th><td>Lemburgu</td></tr>
+</tbody>
+</table>
+<h2>wyrazy pokrewne</h2>
+<ul>
+<li>rzecz. Lemburczyk (m), Lemburka (ż)</li>
+<li>przym. lemburski</li>
+</ul>
+<h2>tłumaczenia</h2>
+<ul>
+<li>angielski: (1.1) Lembourg</li>
+<li>nowogrecki: (1.1) Λέμβουργ (Lémbourg)</li>
+<li>niemiecki: (1.1) Lemberg</li>
+</ul>`;
+createModalWindow('dictionary', dictionaryhtml);
+setModalOpener('dictionary', 'dictionary-opener');
+</script>
 </body>
 </html>
