--- a/wiki/index.html
+++ b/wiki/index.html
@@ -62,6 +62,7 @@
             <ul class="article-category">
                 <h1>Firmy</h1>
                 <li><a href="https://grumqy.github.io/fangea/wiki/cartland/">Cartland</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/ergonbud/">Ergonbud</a></li>
             </ul> 
             <ul class="article-category">
                 <h1>Religie</h1>
