--- a/wiki/index.html
+++ b/wiki/index.html
@@ -41,6 +41,7 @@
                 <h1>Państwa</h1>
                 <li><a href="https://grumqy.github.io/fangea/wiki/pampersia/">Pampersia</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/nadmorze/">Nadmorze</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/iznotia/">Iznotia</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/montecydia/">Montecydia</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/lemburg/">Lemburg</a></li>
             </ul> 
