--- a/wiki/iznotia/index.html
+++ b/wiki/iznotia/index.html
@@ -27,7 +27,7 @@
 <h1>Spis Treści</h1>
 <ul></ul>
 </nav>
-<article>
+<article class="outdated">
 <header><div>Iznotia</div><span>29.06.2024</span></header>
 
 
