--- a/wiki/pampersia/index.html
+++ b/wiki/pampersia/index.html
@@ -34,7 +34,7 @@
 
             </ul>
         </nav>
-        <article>
+        <article class="outdated">
             <header>
                 <div>Pampersia</div>
                 <span>11.06.2024</span>
