--- a/wiki/index.html
+++ b/wiki/index.html
@@ -77,6 +77,10 @@
                 <h1>Konflikty Zbrojne</h1>
                 <li><a href="https://grumqy.github.io/fangea/wiki/wojna_domowa_w_wizgardzie/">Wojna domowa w Wizgardzie</a></li>
             </ul>
+            <ul class="article-category">
+                <h1>Wydarzenia Sportowe</h1>
+                <li><a href="https://grumqy.github.io/fangea/wiki/mistrzostwa_fangei_w_piłce_nożnej_2024/">Mistrzostwa Fangei w Piłce Nożnej 2024</a></li>
+            </ul>
         </div>
     </main>
     <script src="/fangea/pageheader.js"></script>
