--- a/waluty/index.html
+++ b/waluty/index.html
@@ -41,7 +41,7 @@
                                 </div>
                                 <div class="currency-data">
                                     <div class="currency-name">FNK</div>
-                                    <div class="currency-description">Korona Pamperska</div>
+                                    <div class="currency-description">Korona Fangejska</div>
                                 </div>
                             </div>
                             <div class="currency-item">
@@ -160,7 +160,7 @@
                                 </div>
                                 <div class="currency-data">
                                     <div class="currency-name">FNK</div>
-                                    <div class="currency-description">Korona Pamperska</div>
+                                    <div class="currency-description">Korona Fangejska</div>
                                 </div>
                             </div>
                             <div class="currency-item">
