--- a/waluty/index.html
+++ b/waluty/index.html
@@ -23,7 +23,7 @@
         <div id="currency-calc-container">
             <h1>Kalkulator Walut</h1>
             <h2>Wybierz waluty i sprawdź kurs.</h2>
-            <div class="currency-calc-row" id="currency-input" data-selected-currency="KPA">
+            <div class="currency-calc-row" id="currency-input" data-selected-currency="FNK">
                 <div class="select-label">
                     <div class="currency-item">
                         <div class="currency-logo-container">
