--- a/waluty/index.html
+++ b/waluty/index.html
@@ -55,7 +55,7 @@
                             </div>
                             <div class="currency-item">
                                 <div class="currency-logo-container">
-                                    <div class="currency-logo" style="background-image: url('https://i.ibb.co/BPS82n0/image-4.png');"></div>
+                                    <div class="currency-logo" style="background-image: url('https://i.ibb.co/wKcZqxM/obraz-2024-07-02-154053497.png');"></div>
                                 </div>
                                 <div class="currency-data">
                                     <div class="currency-name">REG</div>
@@ -174,7 +174,7 @@
                             </div>
                             <div class="currency-item">
                                 <div class="currency-logo-container">
-                                    <div class="currency-logo" style="background-image: url('https://i.ibb.co/BPS82n0/image-4.png');"></div>
+                                    <div class="currency-logo" style="background-image: url('https://i.ibb.co/wKcZqxM/obraz-2024-07-02-154053497.png');"></div>
                                 </div>
                                 <div class="currency-data">
                                     <div class="currency-name">REG</div>
