--- a/wiki/lemburg/index.html
+++ b/wiki/lemburg/index.html
@@ -3,7 +3,7 @@
 <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Tytuł Artykułu - Fangea i inne kontynenty</title>
+<title>Lemburg - Fangea i inne kontynenty</title>
 <meta property="og:title" content="Tytuł Artykułu">
 <meta name="twitter:title" content="Tytuł Artykułu">
 <meta name="description" content="Lemburg (gr. Λέμβουργ, IPA: [ˈlɛmburk]), Republika Lemburska (gr. Λεμβουργική Δημοκρατία Lembourgikí Dimokratía, IPA: [lɛm.bur.ˈʝi.ci ði.mo.kɾaˈti.a]) – państwo federacyjne położone na wyspach lemburskich. Jest jednym z nielicznych państw, gdzie powszechnie stosuje się formy bezpośredniej demokracji. Lemburg jest państwem neutralnym. Lemburg ma długą historię i bogate dziedzictwo kulturowe. Uważan">
