--- a/wiki/mistrzostwa_fangei_w_piłce_nożnej_2024/index.html
+++ b/wiki/mistrzostwa_fangei_w_piłce_nożnej_2024/index.html
@@ -3,7 +3,7 @@
 <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Tytuł Artykułu - Fangea i inne kontynenty</title>
+<title>Mistrzostwa Fangei w Piłce Nożnej 2024 - Fangea i inne kontynenty</title>
 <meta property="og:title" content="Tytuł Artykułu">
 <meta name="twitter:title" content="Tytuł Artykułu">
 <meta name="description" content="Mistrzostwa Fangei w Piłce Nożnej 2024 dwudziesty pierwszy turniej o mistrzostwo Fangei w piłce nożnej mężczyzn. Gospodarzem turnieju, po raz czwarty w historii, będzie Sudfangea – w przeszłości, mistrzostwa w 1961 oraz 2001 roku rozgrywały się na terenie Sudfangei oraz cztery mecze Pucharu  Fangei 2021 były rozgrywane w Rockford. Turniej odbędzie się na 5 stadionach w 4 różnych miastach.">
