--- a/wiki/mistrzostwa_fangei_w_piłce_nożnej_2024/index.html
+++ b/wiki/mistrzostwa_fangei_w_piłce_nożnej_2024/index.html
@@ -78,7 +78,7 @@
 <p>Turniej odbędzie się na 5 stadionach w 4 sudfangejskich miastach: w Porcie Wilhelm, Rockford, Willington oraz w Tuhalfie.</p>
 
 
-<div class="table-wrapper"><table><tbody><tr><th><a href="https://grumqy.github.io/fangea/wiki/rockford/">Rockford</a></th><td style="text-align: center;" rowspan="8" colspan="2"> <img src="https://i.ibb.co/7rT7TNB/gownoseraka.png" width="500"><br><b>Miasta-organizatorzy na mapie <a href="https://grumqy.github.io/fangea/wiki/sudfangea/">Sudfangei</a></b> </td></tr><tr><td> Rockford Victory Park  </td></tr><tr><td> Pojemność: <b>65 000</b>  </td></tr><tr><td style="text-align: center;"> <img src="https://i.ibb.co/F47LmL0/4.png" width="200">  </td></tr><tr><th><a href="https://grumqy.github.io/fangea/wiki/port_wilhelm/">Port Wilhelm</a></th></tr><tr><td> Port Wilhelm Nautical Park  </td></tr><tr><td> Pojemność: <b>44 000</b>  </td></tr><tr><td style="text-align: center;"> <img src="https://i.ibb.co/ZGXqqc8/1.png" width="200">  </td></tr><tr><th><a href="https://grumqy.github.io/fangea/wiki/port_wilhelm/">Port Wilhelm</a></th><th><a href="https://grumqy.github.io/fangea/wiki/tuhalf_miasto/">Tuhalf</a></th><th><a href="https://grumqy.github.io/fangea/wiki/willington/">Willington</a></th></tr><tr><td> Port Wilhelm Oceanic Stadium </td><td>Tuhalf Meadows Stadium </td><td>Willington Unity Park  </td></tr><tr><td> <b>Pojemność: 43 000</b> </td><td>Pojemność: <b>40 000</b> </td><td><b>Pojemność: 30 000</b>  </td></tr><tr><td style="text-align: center;"> <img src="https://i.ibb.co/T2VLgNj/5.png" width="200"> </td><td style="text-align: center;"> <img src="https://i.ibb.co/yn7fsJh/3.png" width="200"> </td><td style="text-align: center;"> <img src="https://i.ibb.co/LSKDnrG/2.png" width="200">  </td></tr></tbody></table></div>
+<div class="table-wrapper"><table><tbody><tr><th><a href="https://grumqy.github.io/fangea/wiki/rockford/">Rockford</a></th><td style="text-align: center;" rowspan="8" colspan="2"> <img src="https://i.ibb.co/7rT7TNB/gownoseraka.png" width="500"><br><b>Miasta-organizatorzy na mapie <a href="https://grumqy.github.io/fangea/wiki/sudfangea/">Sudfangei</a></b> </td></tr><tr><td> Rockford Victory Park  </td></tr><tr><td> Pojemność: <b>65 000</b>  </td></tr><tr><td style="text-align: center;"> <img src="https://i.ibb.co/F47LmL0/4.png" height="110">  </td></tr><tr><th><a href="https://grumqy.github.io/fangea/wiki/port_wilhelm/">Port Wilhelm</a></th></tr><tr><td> Port Wilhelm Nautical Park  </td></tr><tr><td> Pojemność: <b>44 000</b>  </td></tr><tr><td style="text-align: center;"> <img src="https://i.ibb.co/ZGXqqc8/1.png" height="110">  </td></tr><tr><th><a href="https://grumqy.github.io/fangea/wiki/port_wilhelm/">Port Wilhelm</a></th><th><a href="https://grumqy.github.io/fangea/wiki/tuhalf_miasto/">Tuhalf</a></th><th><a href="https://grumqy.github.io/fangea/wiki/willington/">Willington</a></th></tr><tr><td> Port Wilhelm Oceanic Stadium </td><td>Tuhalf Meadows Stadium </td><td>Willington Unity Park  </td></tr><tr><td> <b>Pojemność: 43 000</b> </td><td>Pojemność: <b>40 000</b> </td><td><b>Pojemność: 30 000</b>  </td></tr><tr><td style="text-align: center;"> <img src="https://i.ibb.co/T2VLgNj/5.png" height="110"> </td><td style="text-align: center;"> <img src="https://i.ibb.co/yn7fsJh/3.png" height="110"> </td><td style="text-align: center;"> <img src="https://i.ibb.co/LSKDnrG/2.png" height="110">  </td></tr></tbody></table></div>
 
 <h1>Faza grupowa</h1>
 <p>Za zwycięstwo przyznawane są trzy punkty, za remis jeden, o kolejności w grupie będzie decydować suma zdobytych punktów. Do pół finału awansują wszyscy zwycięzcy grup, wszystkie drużyny z drugich miejsc. Gdy <b>dwie lub więcej drużyn</b> uzyskają tę samą liczbę punktów (po rozegraniu wszystkich meczów w grupie), o kolejności decydują kryteria określone przez UFZP kolejno:</p>
@@ -279,15 +279,15 @@ Turniej odbędzie się na 5 stadionach w 4 sudfangejskich miastach: w Porcie Wil
 ! (https://grumqy.github.io/fangea/wiki/rockford/)[Rockford] !|t=cr=8c=2 <img src="https://i.ibb.co/7rT7TNB/gownoseraka.png" width="500" /><br>'''Miasta-organizatorzy na mapie (https://grumqy.github.io/fangea/wiki/sudfangea/)[Sudfangei]''' |
 | Rockford Victory Park |
 | Pojemność: '''65 000''' |
-|t=c <img src="https://i.ibb.co/F47LmL0/4.png" width="200" /> |
+|t=c <img src="https://i.ibb.co/F47LmL0/4.png" height="110" /> |
 ! (https://grumqy.github.io/fangea/wiki/port_wilhelm/)[Port Wilhelm] !
 | Port Wilhelm Nautical Park |
 | Pojemność: '''44 000''' |
-|t=c <img src="https://i.ibb.co/ZGXqqc8/1.png" width="200" /> |
+|t=c <img src="https://i.ibb.co/ZGXqqc8/1.png" height="110" /> |
 ! (https://grumqy.github.io/fangea/wiki/port_wilhelm/)[Port Wilhelm] !! (https://grumqy.github.io/fangea/wiki/tuhalf_miasto/)[Tuhalf] !! (https://grumqy.github.io/fangea/wiki/willington/)[Willington] !
 | Port Wilhelm Oceanic Stadium || Tuhalf Meadows Stadium || Willington Unity Park |
 | '''Pojemność: 43 000''' || Pojemność: '''40 000''' || '''Pojemność: 30 000''' |
-|t=c <img src="https://i.ibb.co/T2VLgNj/5.png" width="200" /> ||t=c <img src="https://i.ibb.co/yn7fsJh/3.png" width="200" /> ||t=c <img src="https://i.ibb.co/LSKDnrG/2.png" width="200" /> |
+|t=c <img src="https://i.ibb.co/T2VLgNj/5.png" height="110" /> ||t=c <img src="https://i.ibb.co/yn7fsJh/3.png" height="110" /> ||t=c <img src="https://i.ibb.co/LSKDnrG/2.png" height="110" /> |
 |}
 
 = Faza grupowa =
